Fixed the slider overflow

--- a/styles/pages/index/index.module.scss
+++ b/styles/pages/index/index.module.scss
@@ -1,10 +1,10 @@
 .slider {
-  overflow: visible !important;
+  overflow: hidden;
 }
 .bullet_container {
   position: absolute;
   right: 2rem !important;
-  bottom: -0.6rem !important;
+  bottom: -0.3rem !important;
   overflow-y: visible;
   background-color: #f9f9f9;
   width: max-content !important;
